demo/hotel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-a
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-b
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-c
  labels:
    istio-injection: enabled
